@@ -9,7 +9,7 @@ Version 2.19.1
 
 * The following bugs are resolved with this release:
 
-  16545, 16683, 16689, 16701, 16706, 16707, 16739.
+  16545, 16683, 16689, 16701, 16706, 16707, 16739, 16815.
 
 Version 2.19
 
